Infrastructure-Entities, Models, Repositories, Services

--- a/Silicon_MVC/Views/Shared/_Layout.cshtml
+++ b/Silicon_MVC/Views/Shared/_Layout.cshtml
@@ -21,9 +21,15 @@
 <body>
     
     <div class="wrapper">
+
+
+        @await Html.PartialAsync("~/Views/Shared/Sections/_HeaderPartial.cshtml")
+
         <main >
             @RenderBody()
         </main>
+
+        @await Html.PartialAsync("~/Views/Shared/Sections/_FooterPartial.cshtml")
     </div>
 
     
