--- a/Silicon_MVC/Views/Default/Error404.cshtml
+++ b/Silicon_MVC/Views/Default/Error404.cshtml
@@ -2,11 +2,15 @@
     ViewData["Title"] = "Ooops! Page was not found";
 }
 
-<div class="container">
-    <img src="~/images/404.svg" alt="404 error" />
-    <div class="content">
-        <h2 class="title">Ooops!</h2>
-        <p>The page you are looking for is not available.</p>
-        <a class="btn-theme-s" asp-action="Home" asp-controller="Default"><i class="fa-solid fa-house"></i> Go to homepage</a>
+
+<section id="error">
+
+    <div class="container">
+        <img src="~/images/404.svg" alt="404 error" />
+        <div class="content">
+            <h2 class="title">Ooops!</h2>
+            <p>The page you are looking for is not available.</p>
+            <a class="btn-theme-s" asp-action="Home" asp-controller="Default"><i class="fa-solid fa-house"></i> Go to homepage</a>
+        </div>
     </div>
-</div>
+</section>
