--- a/Silicon_MVC/Views/Shared/Sections/_HeaderPartial.cshtml
+++ b/Silicon_MVC/Views/Shared/Sections/_HeaderPartial.cshtml
@@ -1,12 +1,15 @@
 ﻿
 <header>
     <div class="container">
-        <a class="logo" asp-controller="Home" asp-action="Index"><img src="~/images/Silicon-Logotype -Light-Mode.svg" alt="Silicon"></a>
+        <a class="logo" asp-controller="Default" asp-action="Home"><img src="~/images/Silicon-Logotype -Light-Mode.svg" alt="Silicon"></a>
 
         <div id="menu" class="hide">
             <nav>
-                <a class="menu-link" asp-controller="Home" asp-action="Index" asp-fragment="overview">Overview</a>
-                <a class="menu-link" asp-controller="Home" asp-action="Index" asp-fragment="features">Features</a>
+                <a class="menu-link" asp-controller="Default" asp-action="Home" asp-fragment="overview">Overview</a>
+                <a class="menu-link" asp-controller="Default" asp-action="Home" asp-fragment="features">Features</a>
+                
+                
+                
                 <a class="menu-link" asp-controller="Contact" asp-action="Index">Contact</a>
             </nav>
         </div>
