--- a/Silicon_MVC/Views/_ViewImports.cshtml
+++ b/Silicon_MVC/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Silicon_MVC
-@using Silicon_MVC.Models
+@* @using Silicon_MVC.Models *@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Silicon_MVC.Views
+@using Silicon_MVC.ViewModels
