--- a/Silicon_MVC/wwwroot/css/scss/_sections.scss
+++ b/Silicon_MVC/wwwroot/css/scss/_sections.scss
@@ -1,3 +1,4 @@
 @import './sections/_header.scss';
 @import './sections/_footer.scss';
 @import './sections/_error.scss';
+@import './sections/_showcase.scss';
