--- a/Silicon_MVC/wwwroot/css/site.css
+++ b/Silicon_MVC/wwwroot/css/site.css
@@ -633,3 +633,109 @@ footer .container .social-media {
 #error .container .content p {
   margin-bottom: 40px;
 }
+.showcase {
+  position: relative;
+  margin-bottom: 80px;
+}
+@media (min-width: 992px) {
+  .showcase {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 0px;
+  }
+}
+.showcase img {
+  position: relative;
+  z-index: -1;
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .showcase img {
+    width: 45%;
+  }
+}
+.showcase .container {
+  height: 100%;
+}
+@media (min-width: 992px) {
+  .showcase .container {
+    position: absolute;
+    left: 0;
+    right: 0;
+  }
+}
+.showcase .container .content {
+  margin-top: 0px;
+  width: 100%;
+  text-align: center;
+}
+@media (min-width: 992px) {
+  .showcase .container .content {
+    margin-top: 100px;
+    width: 40%;
+    text-align: left;
+  }
+}
+.showcase .container .content h1 {
+  line-height: 160%;
+  font-weight: 400;
+  color: #565973;
+  font-family: "Manrope", sans-serif;
+  font-weight: 800;
+  color: #0B0F19;
+  font-size: 32px !important;
+}
+@media (min-width: 992px) {
+  .showcase .container .content h1 {
+    line-height: 160%;
+    font-weight: 400;
+    color: #565973;
+    font-family: "Manrope", sans-serif;
+    font-weight: 800;
+    color: #0B0F19;
+    font-size: 56px !important;
+  }
+}
+.showcase .container .content p {
+  margin: 20px 0 40px 0;
+  line-height: 160%;
+  font-weight: 400;
+  color: #565973;
+  font-family: "Manrope", sans-serif;
+  font-size: 16px !important;
+}
+@media (min-width: 992px) {
+  .showcase .container .content p {
+    margin: 40px 0 50px 0;
+    line-height: 160%;
+    font-weight: 400;
+    color: #565973;
+    font-family: "Manrope", sans-serif;
+    font-size: 18px !important;
+  }
+}
+.showcase .container .content .btn-theme-s {
+  display: inline-block;
+}
+.showcase .container .content h6 {
+  margin: 150px 0 30px 0;
+  display: none;
+}
+@media (min-width: 992px) {
+  .showcase .container .content h6 {
+    margin: 100px 0 30px 0;
+    display: flex;
+  }
+}
+.showcase .container .content .brands {
+  display: none;
+  gap: 30px;
+}
+@media (min-width: 992px) {
+  .showcase .container .content .brands {
+    display: flex;
+  }
+}
+.showcase .container .content .brands img {
+  width: 120px;
+}
