Auth and Account Controller

--- a/Silicon_MVC/wwwroot/css/scss/_sections.scss
+++ b/Silicon_MVC/wwwroot/css/scss/_sections.scss
@@ -2,3 +2,5 @@
 @import './sections/_footer.scss';
 @import './sections/_error.scss';
 @import './sections/_showcase.scss';
+@import './sections/_signin.scss';
+@import './sections/_signup.scss';
