--- a/Silicon_MVC/wwwroot/css/scss/core/_colors.scss
+++ b/Silicon_MVC/wwwroot/css/scss/core/_colors.scss
@@ -10,8 +10,9 @@ $gray-700: #565973;
 $gray-800: #33354D;
 $gray-900: #0B0F19;
 $black: #000000;
-$danger: #EF4444;
-$success: #22C55E;
+$danger: #ec4899;
+$success: #14b8a6;
+
 $warning: #FFBA08;
 $info: #4C82F7;
 
