--- a/Silicon_MVC/wwwroot/css/scss/_components.scss
+++ b/Silicon_MVC/wwwroot/css/scss/_components.scss
@@ -1,3 +1,5 @@
+@import './components/_alerts.scss';
+
 @import './components/_links.scss';
 @import './components/_buttons.scss';
 @import './components/_forms.scss';
