--- a/Silicon_MVC/wwwroot/css/site.css
+++ b/Silicon_MVC/wwwroot/css/site.css
@@ -186,6 +186,15 @@ h6, .h6 {
   display: none !important;
 }
 
+.alert {
+  background: #ec4899;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
+  border-radius: 8px;
+}
+
 a {
   line-height: 160%;
   font-weight: 400;
@@ -423,7 +432,7 @@ form .checkbox span.field-validation-error {
   color: #565973;
   font-family: "Manrope", sans-serif;
   font-size: 14px !important;
-  color: #EF4444;
+  color: #ec4899;
 }
 form .checkbox span.field-validation-error::after {
   display: none;
@@ -456,11 +465,11 @@ form input::placeholder {
   opacity: 0.5;
 }
 form input.input-validation-error {
-  border: 1px solid #EF4444 !important;
-  color: #EF4444;
+  border: 0.063rem solid #ec4899 !important;
+  color: #ec4899;
 }
 form input.input-validation-error::placeholder {
-  color: #EF4444;
+  color: #ec4899;
 }
 form textarea {
   padding: 1rem;
@@ -472,11 +481,11 @@ form textarea::placeholder {
   opacity: 0.5;
 }
 form textarea.input-validation-error {
-  border: 0.063rem solid #EF4444 !important;
-  color: #EF4444;
+  border: 0.063rem solid #ec4899 !important;
+  color: #ec4899;
 }
 form textarea.input-validation-error::placeholder {
-  color: #EF4444;
+  color: #ec4899;
 }
 form span.field-validation-error {
   position: absolute;
@@ -487,7 +496,7 @@ form span.field-validation-error {
   color: #565973;
   font-family: "Manrope", sans-serif;
   font-size: 14px !important;
-  color: #EF4444;
+  color: #ec4899;
 }
 form span.field-validation-error::after {
   position: absolute;
@@ -738,4 +747,106 @@ footer .container .social-media {
 }
 .showcase .container .content .brands img {
   width: 120px;
+}
+
+#signin {
+  height: 100%;
+}
+#signin .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+@media (min-width: 992px) {
+  #signin .container {
+    width: 60%;
+  }
+}
+@media (min-width: 1200px) {
+  #signin .container {
+    width: 45%;
+  }
+}
+#signin .container form {
+  padding: 1rem;
+}
+#signin .container form .form-content {
+  display: grid;
+  gap: 1rem 2rem;
+  grid-template-columns: 1fr;
+  grid-template-areas: "email" "password" "remember" "button" "forgot";
+}
+#signin .container form .form-content #form-email {
+  grid-area: email;
+}
+#signin .container form .form-content #form-password {
+  grid-area: password;
+}
+#signin .container form .form-content #form-remember {
+  grid-area: remember;
+  padding: 1rem 0;
+}
+#signin .container form .form-content #rememberMe {
+  width: auto;
+  grid-area: forgot;
+  margin: 1rem 0 0 0;
+  text-align: center;
+}
+
+#signup {
+  height: 100%;
+}
+#signup .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+@media (min-width: 992px) {
+  #signup .container {
+    width: 60%;
+  }
+}
+@media (min-width: 1200px) {
+  #signup .container {
+    width: 45%;
+  }
+}
+#signup .container form {
+  padding: 1rem;
+}
+#signup .container form .form-content {
+  display: grid;
+  gap: 1rem 2rem;
+  grid-template-columns: 1fr;
+  grid-template-areas: "firstname" "lastname" "email" "password" "confirmPassword" "button" "terms";
+}
+@media (min-width: 768px) {
+  #signup .container form .form-content {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "firstname lastname" "email email" "password password" "confirmPassword confirmPassword" "button button" "terms terms";
+  }
+}
+#signup .container form .form-content #form-firstname {
+  grid-area: firstname;
+}
+#signup .container form .form-content #form-lastname {
+  grid-area: lastname;
+}
+#signup .container form .form-content #form-email {
+  grid-area: email;
+}
+#signup .container form .form-content #form-password {
+  grid-area: password;
+}
+#signup .container form .form-content #form-confirm {
+  grid-area: confirmPassword;
+}
+#signup .container form .form-content #form-terms {
+  grid-area: terms;
+  padding: 1rem 0;
+}
+#signup .container form .form-content #form-submit {
+  grid-area: button;
 }
