--- a/Silicon_MVC/wwwroot/css/site.css
+++ b/Silicon_MVC/wwwroot/css/site.css
@@ -589,6 +589,25 @@ header .container .btn-mobilemenu {
     display: none;
   }
 }
+header #mobil-menu {
+  display: none;
+  flex-direction: column;
+  gap: 15px;
+  align-items: center;
+  background-color: #fff;
+}
+header #mobil-menu .account-buttons .btn-gray {
+  margin-bottom: 15px;
+}
+header #mobil-menu nav {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  align-items: center;
+}
+header #mobil-menu[aria-expanded=true] {
+  display: flex;
+}
 
 footer {
   padding: 50px 0 30px 0;
@@ -849,4 +868,145 @@ footer .container .social-media {
 }
 #signup .container form .form-content #form-submit {
   grid-area: button;
+}
+
+#account-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+@media (min-width: 992px) {
+  #account-details {
+    display: grid;
+    grid-template-columns: 2fr 5fr;
+    gap: 150px;
+    margin-bottom: 70px;
+    flex-direction: row;
+    justify-content: normal;
+    align-items: normal;
+  }
+}
+@media (min-width: 992px) {
+  #account-details aside {
+    border-right: 1px solid #E2E5F1;
+    padding-right: 20px;
+  }
+}
+#account-details aside .profile {
+  margin: 20px;
+  text-align: center;
+}
+#account-details aside .profile h5 {
+  margin-top: 15px;
+  margin-bottom: 10px;
+}
+#account-details aside .profile p {
+  line-height: 160%;
+  font-weight: 400;
+  color: #565973;
+  font-family: "Manrope", sans-serif;
+  font-size: 16px !important;
+}
+#account-details aside nav {
+  margin-top: 50px;
+  text-align: center;
+}
+#account-details aside nav a {
+  margin-top: 10px;
+  text-align: left;
+}
+#account-details aside nav .btn-theme-s {
+  text-align: center;
+  justify-content: flex-start;
+}
+#account-details .details {
+  margin-top: 50px;
+  width: 100%;
+}
+#account-details .details .basicInfoForm form {
+  padding: 1rem;
+}
+#account-details .details .basicInfoForm form h5 {
+  color: #6366F1;
+}
+#account-details .details .basicInfoForm form .content {
+  display: grid;
+  gap: 1rem 2rem;
+  grid-template-columns: 1fr;
+  grid-template-areas: "firstname" "lastname" "email" "phone" "bio" "buttons";
+}
+@media (min-width: 992px) {
+  #account-details .details .basicInfoForm form .content {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "firstname lastname" "email phone" "bio bio" "buttons buttons";
+  }
+}
+#account-details .details .basicInfoForm form .content #form-firstname {
+  grid-area: firstname;
+}
+#account-details .details .basicInfoForm form .content #form-lastname {
+  grid-area: lastname;
+}
+#account-details .details .basicInfoForm form .content #form-email {
+  grid-area: email;
+}
+#account-details .details .basicInfoForm form .content #form-phone {
+  grid-area: phone;
+}
+#account-details .details .basicInfoForm form .content #form-bio {
+  grid-area: bio;
+}
+#account-details .details .basicInfoForm form .content #form-bio span {
+  color: #B4B7C9;
+  font-weight: 400;
+}
+#account-details .details .basicInfoForm form .content .form-buttons {
+  grid-area: buttons;
+  margin: 20px 0;
+  display: flex;
+  gap: 20px;
+}
+#account-details .details .addressInfoForm {
+  margin-top: 30px;
+}
+#account-details .details .addressInfoForm form {
+  padding: 1rem;
+}
+#account-details .details .addressInfoForm form h5 {
+  color: #6366F1;
+}
+#account-details .details .addressInfoForm form .content {
+  display: grid;
+  gap: 1rem 2rem;
+  grid-template-columns: 1fr;
+  grid-template-areas: "addressline_1" "addressline_2" "postalcode" "city" "buttons";
+}
+@media (min-width: 992px) {
+  #account-details .details .addressInfoForm form .content {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: "addressline_1 addressline_1" "addressline_2 addressline_2" "postalcode city" "buttons buttons";
+  }
+}
+#account-details .details .addressInfoForm form .content #form-addressline-1 {
+  grid-area: addressline_1;
+}
+#account-details .details .addressInfoForm form .content #form-addressline-2 {
+  grid-area: addressline_2;
+}
+#account-details .details .addressInfoForm form .content #form-addressline-2 span {
+  color: #B4B7C9;
+  font-weight: 400;
+}
+#account-details .details .addressInfoForm form .content #form-postalcode {
+  grid-area: postalcode;
+}
+#account-details .details .addressInfoForm form .content #form-city {
+  grid-area: city;
+}
+#account-details .details .addressInfoForm form .content .form-buttons {
+  grid-area: buttons;
+  margin: 20px 0;
+  display: flex;
+  gap: 20px;
 }
