--- a/Silicon_MVC/Views/_ViewImports.cshtml
+++ b/Silicon_MVC/Views/_ViewImports.cshtml
@@ -3,3 +3,5 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Silicon_MVC.Views
 @using Silicon_MVC.ViewModels
+@using Infrastructure.Entities
+@using Microsoft.AspNetCore.Identity
