--- a/Silicon_MVC/wwwroot/css/scss/_sections.scss
+++ b/Silicon_MVC/wwwroot/css/scss/_sections.scss
@@ -4,3 +4,4 @@
 @import './sections/_showcase.scss';
 @import './sections/_signin.scss';
 @import './sections/_signup.scss';
+@import './sections/_details.scss';
