--- a/Silicon_MVC/Views/Auth/SignIn.cshtml
+++ b/Silicon_MVC/Views/Auth/SignIn.cshtml
@@ -55,5 +55,5 @@
 
 </section>
 
-@* @await Html.PartialAsync("~/Views/Shared/_ValidationScriptPartial.cshtml")   *@
-<script defer src="~/js/validation.js"></script>
+@await Html.PartialAsync("~/Views/Shared/_ValidationScriptPartial.cshtml")  
+@* <script defer src="~/js/validation.js"></script> *@
