--- a/Silicon_MVC/Views/Auth/SignUp.cshtml
+++ b/Silicon_MVC/Views/Auth/SignUp.cshtml
@@ -65,6 +65,4 @@
     </div>
 
 </section>
-
-@* @await Html.PartialAsync("~/Views/Shared/_ValidationScriptPartial.cshtml")  *@ 
-<script defer src="~/js/validation.js"></script>
+ @await Html.PartialAsync("~/Views/Shared/_ValidationScriptPartial.cshtml") 
