--- a/Silicon_MVC/wwwroot/css/scss/sections/_header.scss
+++ b/Silicon_MVC/wwwroot/css/scss/sections/_header.scss
@@ -1,109 +1,115 @@
-
-
 header {
-    padding: 1rem 0 1rem 1rem;
+    padding: 15px 0;
 
-    @include md {
-        padding: 1rem;
+    &.gray {
+        background-color: $gray-100;
     }
 
     .container {
         display: grid;
         align-items: center;
-        grid-template-columns: 1fr auto auto;
-        grid-template-areas: "logo switch mobile" "menu menu menu" "buttons buttons buttons";
+        grid-template-columns: 1fr auto;
+        grid-template-areas: "logo mobile";
+        gap: 40px;
 
-        @include xl {
+        @include lg {
             grid-template-columns: auto 1fr auto auto;
-            gap: 20px;
-            grid-template-areas: "logo menu switch buttons"
+            grid-template-areas: "logo menu switch buttons";
         }
 
-        .logo {
+        #logo {
             grid-area: logo;
         }
 
-        #menu {
+        #menu-links {
             grid-area: menu;
-            display: block;
-            margin-bottom: 15px;
+            display: none;
 
             @include lg {
                 display: block;
-                margin-bottom: 0;
             }
 
             nav {
-                display: grid;
-                justify-content: center;
-                gap: 1rem;
-
-                @include xl {
-                    display: flex;
-                    justify-content: flex-start;
-                }
+                display: flex;
+                gap: 15px;
             }
         }
 
         .btn-switch {
             grid-area: switch;
-            display: flex;
-            justify-content: center;
+            display: none;
 
-            @include xxl {
-                display: flex;
+            @include lg {
+                display: block;
             }
         }
 
-        #account-buttons {
+        .account-buttons {
             grid-area: buttons;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 1rem;
+            display: none;
+            gap: 15px;
 
-            @include xl {
+            @include lg {
                 display: flex;
             }
         }
 
-        .btn-mobilemenu {
+        .profile-img {
+            width: 40px;
+            height: 40px;
+            margin-left: 15px;
+
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+
+        .toggleMenu {
             grid-area: mobile;
             display: block;
-            margin-left: 20px;
-            font-size: 27px;
+            font-size: 30px;
             border: none;
             background-color: $white;
 
-            @include xl {
+            @include lg {
                 display: none;
             }
         }
     }
 
-    #mobil-menu {
+    #mobileMenu {
         display: none;
         flex-direction: column;
         gap: 15px;
         align-items: center;
-        background-color: #fff;
+        background-color: $white;
+
+        .dark-mode & {
+            background-color: $gray-900;
+        }
 
 
         .account-buttons {
             .btn-gray {
                 margin-bottom: 15px;
+                margin-top: 15px;
+            }
+
+            .btn-theme {
+                margin-bottom: 15px;
             }
         }
     }
 
-    #mobil-menu nav {
+    #mobileMenu nav {
         display: flex;
         flex-direction: column;
         gap: 15px;
         align-items: center;
     }
 
-    #mobil-menu[aria-expanded="true"] {
+    #mobileMenu[aria-expanded="true"] {
         display: flex;
     }
 }
