--- a/Silicon_MVC/wwwroot/css/site.css
+++ b/Silicon_MVC/wwwroot/css/site.css
@@ -186,8 +186,17 @@ h6, .h6 {
   display: none !important;
 }
 
-.alert {
+.alert-danger {
   background: #ec4899;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
+  border-radius: 8px;
+}
+
+.alert-success {
+  background: #14b8a6;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -509,103 +518,104 @@ form span.field-validation-error::after {
 }
 
 header {
-  padding: 1rem 0 1rem 1rem;
+  padding: 15px 0;
 }
-@media (min-width: 768px) {
-  header {
-    padding: 1rem;
-  }
+header.gray {
+  background-color: #F3F6FF;
 }
 header .container {
   display: grid;
   align-items: center;
-  grid-template-columns: 1fr auto auto;
-  grid-template-areas: "logo switch mobile" "menu menu menu" "buttons buttons buttons";
+  grid-template-columns: 1fr auto;
+  grid-template-areas: "logo mobile";
+  gap: 40px;
 }
-@media (min-width: 1200px) {
+@media (min-width: 992px) {
   header .container {
     grid-template-columns: auto 1fr auto auto;
-    gap: 20px;
     grid-template-areas: "logo menu switch buttons";
   }
 }
-header .container .logo {
+header .container #logo {
   grid-area: logo;
 }
-header .container #menu {
+header .container #menu-links {
   grid-area: menu;
-  display: block;
-  margin-bottom: 15px;
+  display: none;
 }
 @media (min-width: 992px) {
-  header .container #menu {
+  header .container #menu-links {
     display: block;
-    margin-bottom: 0;
   }
 }
-header .container #menu nav {
-  display: grid;
-  justify-content: center;
-  gap: 1rem;
-}
-@media (min-width: 1200px) {
-  header .container #menu nav {
-    display: flex;
-    justify-content: flex-start;
-  }
+header .container #menu-links nav {
+  display: flex;
+  gap: 15px;
 }
 header .container .btn-switch {
   grid-area: switch;
-  display: flex;
-  justify-content: center;
+  display: none;
 }
-@media (min-width: 1400px) {
+@media (min-width: 992px) {
   header .container .btn-switch {
-    display: flex;
+    display: block;
   }
 }
-header .container #account-buttons {
+header .container .account-buttons {
   grid-area: buttons;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
+  display: none;
+  gap: 15px;
 }
-@media (min-width: 1200px) {
-  header .container #account-buttons {
+@media (min-width: 992px) {
+  header .container .account-buttons {
     display: flex;
   }
 }
-header .container .btn-mobilemenu {
+header .container .profile-img {
+  width: 40px;
+  height: 40px;
+  margin-left: 15px;
+}
+header .container .profile-img img {
+  width: 100%;
+  height: 100%;
+}
+header .container .toggleMenu {
   grid-area: mobile;
   display: block;
-  margin-left: 20px;
-  font-size: 27px;
+  font-size: 30px;
   border: none;
   background-color: #FFFFFF;
 }
-@media (min-width: 1200px) {
-  header .container .btn-mobilemenu {
+@media (min-width: 992px) {
+  header .container .toggleMenu {
     display: none;
   }
 }
-header #mobil-menu {
+header #mobileMenu {
   display: none;
   flex-direction: column;
   gap: 15px;
   align-items: center;
-  background-color: #fff;
+  background-color: #FFFFFF;
 }
-header #mobil-menu .account-buttons .btn-gray {
+.dark-mode header #mobileMenu {
+  background-color: #0B0F19;
+}
+header #mobileMenu .account-buttons .btn-gray {
+  margin-bottom: 15px;
+  margin-top: 15px;
+}
+header #mobileMenu .account-buttons .btn-theme {
   margin-bottom: 15px;
 }
-header #mobil-menu nav {
+header #mobileMenu nav {
   display: flex;
   flex-direction: column;
   gap: 15px;
   align-items: center;
 }
-header #mobil-menu[aria-expanded=true] {
+header #mobileMenu[aria-expanded=true] {
   display: flex;
 }
 
@@ -872,24 +882,24 @@ footer .container .social-media {
 
 #account-details {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 @media (min-width: 992px) {
   #account-details {
+    flex-direction: row;
+    justify-content: normal;
+    align-items: normal;
     display: grid;
     grid-template-columns: 2fr 5fr;
     gap: 150px;
     margin-bottom: 70px;
-    flex-direction: row;
-    justify-content: normal;
-    align-items: normal;
   }
 }
 @media (min-width: 992px) {
   #account-details aside {
-    border-right: 1px solid #E2E5F1;
+    border-right: 0.063rem solid #E2E5F1;
     padding-right: 20px;
   }
 }
@@ -909,16 +919,31 @@ footer .container .social-media {
   font-size: 16px !important;
 }
 #account-details aside nav {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
   margin-top: 50px;
   text-align: center;
 }
 #account-details aside nav a {
+  display: block;
   margin-top: 10px;
-  text-align: left;
+  text-align: center;
+}
+#account-details aside nav a i {
+  color: #565973;
+  padding-right: 10px;
+}
+#account-details aside nav a i.fa-solid.fa-gear {
+  color: #FFFFFF;
 }
 #account-details aside nav .btn-theme-s {
-  text-align: center;
-  justify-content: flex-start;
+  display: block;
+  text-align: left;
+}
+#account-details aside nav .btn-theme-s i {
+  color: #FFFFFF;
+  padding-right: 10px;
 }
 #account-details .details {
   margin-top: 50px;
