--- a/Silicon_MVC/Views/Account/Details.cshtml
+++ b/Silicon_MVC/Views/Account/Details.cshtml
@@ -19,7 +19,7 @@
 
             <nav>
                 <a class="btn-theme" asp-controller="Account" asp-action="Details"><i class="fa-solid fa-gear"></i>Account Details</a>
-                <a class="btn-transparent" asp-controller="Account" asp-action="Security"><i class="fa-solid fa-lock"></i></i>Security</a>
+                <a class="btn-transparent" asp-controller="Account" asp-action="Security"><i class="fa-solid fa-lock"></i>Security</a>
                 <a class="btn-transparent" asp-controller="Courses" asp-action="SavedCourses"><i class="fa-regular fa-bookmark"></i>Saved Courses</a>
                 <a class="btn-transparent" asp-controller="Auth" asp-action="SignOut"><i class="fa-solid fa-right-from-bracket"></i>Sign Out</a>
             </nav>
