--- a/Silicon_MVC/wwwroot/css/scss/_sections.scss
+++ b/Silicon_MVC/wwwroot/css/scss/_sections.scss
@@ -2,6 +2,14 @@
 @import './sections/_footer.scss';
 @import './sections/_error.scss';
 @import './sections/_showcase.scss';
+@import './sections/_want.scss';
+@import './sections/_features.scss';
+@import './sections/_switchDarkLight.scss';
+@import './sections/_manage.scss';
+@import './sections/_download.scss';
+@import './sections/_integrate.scss';
+
 @import './sections/_signin.scss';
 @import './sections/_signup.scss';
 @import './sections/_details.scss';
+
