--- a/Silicon_MVC/Views/Shared/Sections/_HeaderPartial.cshtml
+++ b/Silicon_MVC/Views/Shared/Sections/_HeaderPartial.cshtml
@@ -14,15 +14,36 @@
         <div id="menu-links">
             <nav>
                 <a class="menu-link" asp-controller="Home" asp-action="Index" asp-fragment="overview">Overview</a>
-                <a class="menu-link" asp-controller="Home" asp-action="Index" asp-fragment="features">Features</a>
-                <a class="menu-link" asp-controller="Contact" asp-action="Index">Contact</a>
+                
+
+                
 
                 @if (_signInManager.IsSignedIn(User))
                 {
                         <a class="menu-link" asp-controller="Courses" asp-action="Index">Courses</a>
+
+                    @if(User.IsInRole("SuperAdmin"))
+                    {
+                        <a class="menu-link" asp-controller="Admin" asp-action="Index">Admin Portal</a>
+
+                    }
+                   @*  else if (User.IsInRole("CIO")
+                    {
+                        < a class="menu-link" asp-controller="Admin" asp-action="Settings">Settings</a>
+                    } *@
+                }
+                else
+                {
+                    <a class="menu-link" asp-controller="Home" asp-action="Index" asp-fragment="features">Features</a>
                 }
 
+
+                <a class="menu-link" asp-controller="Contact" asp-action="Index">Contact</a>
+
             </nav>
+
+           
+
         </div>
 
         <div class="btn-switch">
@@ -38,7 +59,7 @@
         <div class="account-buttons">
             @if (_signInManager.IsSignedIn(User))
             {
-                    <a class="btn-gray" asp-controller="Auth" asp-action="SignOut"><i class="fa-light fa-right-to-bracket"></i><span>Sign Out</span></a>
+                <a class="btn-gray" asp-controller="Auth" asp-action="SignOut"><i class="fa-solid fa-right-from-bracket"></i><span>Sign Out</span></a>
                     <div class="profile-img">
                         <a asp-controller="Account" asp-action="Details">
                             <img src="~/images/profile-image.svg" alt="Profile image">
@@ -47,8 +68,8 @@
             }
             else
             {
-                    <a class="btn-gray" asp-controller="Auth" asp-action="SignIn"><i class="fa-light fa-right-to-bracket"></i><span>Sign in</span></a>
-                    <a class="btn-theme" asp-controller="Auth" asp-action="SignUp"><i class="fa-regular fa-user"></i><span>Sign up</span></a>
+                <a class="btn-gray" asp-controller="Auth" asp-action="SignIn"><i class="fa-solid fa-right-to-bracket"></i><span>Sign in</span></a>
+                <a class="btn-theme" asp-controller="Auth" asp-action="SignUp"><i class="fa-regular fa-user"></i><span>Sign up</span></a>
             }
 
         </div>
