--- a/Silicon_MVC/Views/_ViewImports.cshtml
+++ b/Silicon_MVC/Views/_ViewImports.cshtml
@@ -5,3 +5,5 @@
 @using Silicon_MVC.ViewModels
 @using Infrastructure.Entities
 @using Microsoft.AspNetCore.Identity
+
+@using Infrastructure.Services
