--- a/Silicon_MVC/wwwroot/css/site.css
+++ b/Silicon_MVC/wwwroot/css/site.css
@@ -778,6 +778,547 @@ footer .container .social-media {
   width: 120px;
 }
 
+.want {
+  background-color: #F3F6FF;
+  padding: 80px 0;
+}
+.dark-mode .want {
+  background-color: #0B0F19;
+  color: #FFFFFF;
+}
+.want .container {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: column;
+}
+.want .container .title {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+@media (min-width: 992px) {
+  .want .container .title {
+    justify-content: flex-start;
+  }
+}
+.want .container .title h1 {
+  line-height: 160%;
+  font-weight: 400;
+  color: #565973;
+  font-family: "Manrope", sans-serif;
+  font-weight: 800;
+  color: #0B0F19;
+  font-size: 24px !important;
+}
+@media (min-width: 992px) {
+  .want .container .title h1 {
+    line-height: 160%;
+    font-weight: 400;
+    color: #565973;
+    font-family: "Manrope", sans-serif;
+    font-weight: 800;
+    color: #0B0F19;
+    font-size: 40px !important;
+  }
+}
+.want .container .title img {
+  display: none;
+}
+@media (min-width: 992px) {
+  .want .container .title img {
+    display: block;
+  }
+}
+@media (min-width: 992px) {
+  .want .container .contentEmail .contentSign {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+  }
+}
+.want .container .contentEmail .contentSign .column {
+  margin-left: 0px;
+}
+@media (min-width: 992px) {
+  .want .container .contentEmail .contentSign .column {
+    margin-left: 50px;
+  }
+}
+.want .container .contentEmail .contentSign .column .input-group {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 1rem;
+}
+.want .container .contentEmail .email {
+  margin-top: 40px;
+  margin-bottom: 10px;
+}
+@media (min-width: 992px) {
+  .want .container .contentEmail .email {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 20px;
+  }
+}
+.want .container .contentEmail .email .input-group {
+  display: block;
+  width: 100%;
+  /*                    border: 0px;
+  border-radius: 5px;
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path d="M22 5H2C0.9 5 0 5.9 0 7v10c0 1.1 0.9 2 2 2h20c1.1 0 2-0.9 2-2V7c0-1.1-0.9-2-2-2zM12 15.5L2 9V7l10 6.5L22 7v2L12 15.5z"/></svg>');
+  background-repeat: no-repeat;
+  background-size: 20px 20px;
+  background-position: 5px center;*/
+}
+@media (min-width: 992px) {
+  .want .container .contentEmail .email .input-group {
+    display: block;
+    /*    width: 650px;*/
+    padding: 13px;
+    padding-left: 30px;
+    border: 0px;
+    border-radius: 5px;
+  }
+}
+.want .container .contentEmail .email .input-group input {
+  width: 100%;
+}
+.want .container .contentEmail .email .input-group span {
+  margin-top: -25px;
+}
+@media (min-width: 992px) {
+  .want .container .contentEmail .email .input-group span {
+    margin-top: -15px;
+  }
+}
+.want .container .contentEmail .email .btn-theme {
+  margin: 20px 0;
+}
+@media (min-width: 992px) {
+  .want .container .contentEmail .email .btn-theme {
+    margin: 0px;
+    margin-left: 20px;
+    /*margin-top: 23px;*/
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+}
+.want .container .contentEmail p {
+  margin-left: 0px;
+}
+@media (min-width: 992px) {
+  .want .container .contentEmail p {
+    margin-left: 50px;
+  }
+}
+
+.features {
+  background-color: #F3F6FF;
+  padding: 80px 0;
+}
+.dark-mode .features {
+  background-color: #0B0F19;
+  color: #FFFFFF;
+}
+.features .container {
+  display: grid;
+  justify-content: center;
+  text-align: center;
+}
+.features .container .tools {
+  margin-top: 20px;
+  display: grid;
+}
+@media (min-width: 992px) {
+  .features .container .tools {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+.features .container .tools .box {
+  padding: 20px;
+  border: 1px solid #E2E5F1;
+  transition: all 0.15s ease-in-out;
+}
+@media (min-width: 992px) {
+  .features .container .tools .box:nth-child(1) {
+    border-top: 0px solid #E2E5F1;
+    border-left: 0px solid #E2E5F1;
+  }
+  .features .container .tools .box:nth-child(2) {
+    border-top: 0px solid #E2E5F1;
+  }
+  .features .container .tools .box:nth-child(3) {
+    border-top: 0px solid #E2E5F1;
+    border-right: 0px solid #E2E5F1;
+  }
+  .features .container .tools .box:nth-child(4) {
+    border-bottom: 0px solid #E2E5F1;
+    border-left: 0px solid #E2E5F1;
+  }
+  .features .container .tools .box:nth-child(5) {
+    border-bottom: 0px solid #E2E5F1;
+  }
+  .features .container .tools .box:nth-child(6) {
+    border-bottom: 0px solid #E2E5F1;
+    border-right: 0px solid #E2E5F1;
+  }
+}
+.features .container .tools .box:hover {
+  transition: all 0.15s ease-in-out;
+  cursor: pointer;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 9px -1px rgba(19, 16, 34, 0.03), 0px 4.4px 20px -1px rgba(19, 16, 34, 0.05);
+}
+.features .container .tools .box img {
+  padding: 10px;
+  background-color: #F3F6FF;
+  margin: 20px;
+  border-radius: 8px;
+}
+.features .container .tools .box h5 {
+  line-height: 160%;
+  font-weight: 400;
+  color: #565973;
+  font-family: "Manrope", sans-serif;
+  font-weight: 800;
+  color: #0B0F19;
+  font-size: 20px !important;
+}
+.features .container .tools .box p {
+  line-height: 160%;
+  font-weight: 400;
+  color: #565973;
+  font-family: "Manrope", sans-serif;
+  font-size: 16px !important;
+}
+
+.switch {
+  position: relative;
+}
+
+.dark-light-box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  z-index: 0;
+}
+.dark-light-box .dark {
+  background-color: #0B0F19;
+  flex: 1;
+}
+.dark-light-box .light {
+  background-color: white;
+  flex: 1;
+}
+
+.black {
+  position: relative;
+  z-index: 1;
+  padding-top: 50px;
+}
+.black::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 2px;
+  height: 100%;
+  background-color: #6366F1;
+  z-index: 2;
+  transform: translateX(-1px);
+}
+.black .text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 40px;
+}
+.black .text .dark {
+  line-height: 160%;
+  font-weight: 400;
+  color: #565973;
+  font-family: "Manrope", sans-serif;
+  font-weight: 800;
+  color: #0B0F19;
+  font-size: 20px !important;
+  color: #FFFFFF;
+  margin-left: 1rem;
+}
+@media (min-width: 992px) {
+  .black .text .dark {
+    line-height: 160%;
+    font-weight: 400;
+    color: #565973;
+    font-family: "Manrope", sans-serif;
+    font-weight: 800;
+    color: #0B0F19;
+    font-size: 40px !important;
+    color: #FFFFFF;
+  }
+}
+.black .text .light {
+  color: #000000;
+  margin-left: 1rem;
+  line-height: 160%;
+  font-weight: 400;
+  color: #565973;
+  font-family: "Manrope", sans-serif;
+  font-weight: 800;
+  color: #0B0F19;
+  font-size: 20px !important;
+}
+@media (min-width: 992px) {
+  .black .text .light {
+    line-height: 160%;
+    font-weight: 400;
+    color: #565973;
+    font-family: "Manrope", sans-serif;
+    font-weight: 800;
+    color: #0B0F19;
+    font-size: 40px !important;
+  }
+}
+.black .img-switch {
+  position: relative;
+}
+.black .img-switch img {
+  width: 100%;
+  height: auto;
+}
+.black .img-switch .arrow-button {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #6366F1;
+  border: none;
+  border-radius: 50%;
+  padding: 10px;
+  cursor: pointer;
+  z-index: 4;
+  width: 20px;
+  height: 20px;
+}
+@media (min-width: 992px) {
+  .black .img-switch .arrow-button {
+    width: 30px;
+    height: 30px;
+  }
+}
+.black .img-switch .arrow-button i {
+  color: #FFFFFF;
+  font-size: 0.5rem;
+}
+@media (min-width: 992px) {
+  .black .img-switch .arrow-button i {
+    font-size: 1rem;
+  }
+}
+
+.manage {
+  padding: 80px 0;
+}
+.manage .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media (min-width: 992px) {
+  .manage .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+.manage .container .taskmaster {
+  display: none;
+}
+@media (min-width: 992px) {
+  .manage .container .taskmaster {
+    display: block;
+    width: 100%;
+  }
+}
+.manage .container .info {
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .manage .container .info {
+    width: 50%;
+  }
+}
+.manage .container .info h1 {
+  line-height: 160%;
+  font-weight: 400;
+  color: #565973;
+  font-family: "Manrope", sans-serif;
+  font-weight: 800;
+  color: #0B0F19;
+  font-size: 24px !important;
+  text-align: center;
+  margin-bottom: 20px;
+}
+@media (min-width: 992px) {
+  .manage .container .info h1 {
+    line-height: 160%;
+    font-weight: 400;
+    color: #565973;
+    font-family: "Manrope", sans-serif;
+    font-weight: 800;
+    color: #0B0F19;
+    font-size: 40px !important;
+    text-align: left;
+  }
+}
+.manage .container .info .manage-text {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.manage .container .info .manage-text i {
+  margin-right: 10px;
+  margin-bottom: 12px;
+  color: #4C82F7;
+}
+.manage .container .info .btn-theme-s {
+  width: 40%;
+  margin-top: 30px;
+}
+
+.download {
+  background-color: #F3F6FF;
+  padding: 80px 0;
+}
+.dark-mode .download {
+  background-color: #0B0F19;
+  color: #FFFFFF;
+}
+@media (min-width: 992px) {
+  .download .container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 200px;
+  }
+}
+.download .container .phones {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  z-index: 1;
+}
+.download .container .phones .iPhoneProinside {
+  display: none;
+}
+@media (min-width: 992px) {
+  .download .container .phones .iPhoneProinside {
+    display: block;
+    position: absolute;
+    top: -50px;
+    left: 170px;
+    z-index: 2;
+  }
+}
+.download .container .content-info .appstore {
+  padding: 20px;
+  margin-top: 25px;
+}
+@media (min-width: 992px) {
+  .download .container .content-info .appstore {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding: 0px;
+  }
+}
+.download .container .content-info .appstore .stars {
+  color: #FFBA08;
+  margin-bottom: 10px;
+  margin-top: -10px;
+}
+.download .container .content-info .appstore .icon {
+  margin-bottom: 20px;
+  margin-left: 50px;
+}
+.download .container .content-info .googleplay {
+  padding: 20px;
+  margin-top: 15px;
+}
+@media (min-width: 992px) {
+  .download .container .content-info .googleplay {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding: 0px;
+  }
+}
+.download .container .content-info .googleplay .stars {
+  color: #FFBA08;
+  margin-bottom: 10px;
+  margin-top: -10px;
+}
+.download .container .content-info .googleplay .icon {
+  margin-bottom: 20px;
+  margin-left: 50px;
+}
+
+.integrate {
+  padding: 80px 0;
+}
+.integrate .container {
+  display: grid;
+  justify-content: center;
+  text-align: center;
+}
+.integrate .container .features {
+  margin-top: 20px;
+  display: grid;
+  background-color: #FFFFFF;
+}
+@media (min-width: 992px) {
+  .integrate .container .features {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
+.integrate .container .features .box {
+  padding: 30px;
+  transition: all 0.15s ease-in-out;
+}
+.integrate .container .features .box:hover {
+  transition: all 0.15s ease-in-out;
+  cursor: pointer;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 9px -1px rgba(19, 16, 34, 0.03), 0px 4.4px 20px -1px rgba(19, 16, 34, 0.05);
+}
+.integrate .container .features .box img {
+  margin-bottom: 30px;
+  border-radius: 8px;
+  display: flex;
+}
+.integrate .container .features .box p {
+  line-height: 160%;
+  font-weight: 400;
+  color: #565973;
+  font-family: "Manrope", sans-serif;
+  font-size: 16px !important;
+  display: flex;
+  justify-content: left;
+  text-align: left;
+}
+
 #signin {
   height: 100%;
 }
