Courses and Contact

--- a/Silicon_MVC/Views/Auth/SignIn.cshtml
+++ b/Silicon_MVC/Views/Auth/SignIn.cshtml
@@ -18,7 +18,7 @@
             }
 
 
-            <h1> Sign in to your Account</h1>
+            <h1> Welcome Back</h1>
             <p>Don't have an account? <a asp-controller="Auth" asp-action="SignUp">Sign up here</a>. </p>
 
             <div class="form-content">
