--- a/Silicon_MVC/wwwroot/css/scss/_sections.scss
+++ b/Silicon_MVC/wwwroot/css/scss/_sections.scss
@@ -8,6 +8,8 @@
 @import './sections/_manage.scss';
 @import './sections/_download.scss';
 @import './sections/_integrate.scss';
+@import './sections/_contact.scss';
+@import './sections/_courses.scss';
 
 @import './sections/_signin.scss';
 @import './sections/_signup.scss';
