--- a/Silicon_MVC/Views/Default/Home.cshtml
+++ b/Silicon_MVC/Views/Default/Home.cshtml
@@ -8,8 +8,10 @@
 @await Html.PartialAsync("~/Views/Shared/Sections/_ShowcasePartial.cshtml", Model.Showcase)
 
 
-
+<section id="features">
     @await Html.PartialAsync("~/Views/Shared/Sections/_FeaturePartial.cshtml")
+</section>
+
 
 
 
