--- a/Silicon_MVC/Views/Shared/Sections/_FooterPartial.cshtml
+++ b/Silicon_MVC/Views/Shared/Sections/_FooterPartial.cshtml
@@ -1,10 +1,10 @@
 ﻿<footer>
     <div class="container">
         <div class="@((ViewContext.RouteData.Values["controller"] as string == "Auth") ? "d-none" : "social-media")">
-            <a class="btn-social" href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a class="btn-social" href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
-            <a class="btn-social" href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a class="btn-social" href="#"><i class="fa-brands fa-youtube"></i></a>
+            <a class="btn-social" href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a>
+            <a class="btn-social" href="https://twitter.com"><i class="fa-brands fa-square-x-twitter"></i></a>
+            <a class="btn-social" href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
+            <a class="btn-social" href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
         </div>
         <p>&copy; @DateTime.Now.Year Silicon. All rights reserved. Pulvinar urna condimentum amet tempor, ornare integer. Lorem odio justo malesuada suspendisse viverra aliquet quisque turpis non. Feugiat in odio non nunc ornare consectetur. </p>
     </div>
